--- a/README.html
+++ b/README.html
@@ -7,4 +7,10 @@
 
 土砂降りの中で仁王立ちするボンゴ
 
+#神戸どうぶつ王国 #ハシビロコウ #ハシビロコウのボンゴ #shoebillpic.twitter.com/KIA5cUZGNj<br /><hr>评:252 赞:64748 转:23452<br /><br /><hr><hr>[07月04日 23:33] @lpxt2001<br />广東梅州，大开發商的樓盘，100萬买的房子居然可以用螺絲刀刮穿樓板，見到樓下邻居......里面全是劣质水泥，没有钢筋，随时塌方！這些年房子質量越來越差，强国三代人掏空六个钱包，负责累累，买一套只有70年使用期的房，1998-2010修的房子勉强用30年，後面修的房子估計管15年就差不多了！pic.twitter.com/7MwRMEsd1w<br /><hr>评:57 赞:475 转:330<br /><br /><hr><hr>[07月04日 23:32] @lpxt2001<br />等把他们以污染为由唯一几个能使用的外部通道封禁了，最后剩下的，就是微信了  厉害国从顶到底都在使用的聊天软件，子女也都分布世界，如果把微信给“污染”的话，那就更有意思了<br /><hr>评:0 赞:1 转:0<br /><br /><hr><hr>[07月05日 05:35] @lpxt2001<br />#武漢陽邏
+陽邏人说现在好恐怖呦，装甲车出动了，坐火车去京城也给拦下，整个城包围了，警察警號都用胶布贴住了。该不是要把我们三十万人一起灭掉吧。
+                            七月五日凌晨pic.twitter.com/ZbKbK59Dqc<br /><hr>评:26 赞:295 转:201<br /><br /><hr><hr>[07月04日 14:18] @lpxt2001<br />強拆活埋至少兩人，強國的人命賤如草芥！pic.twitter.com/DlxOUenbl9<br /><hr>评:43 赞:392 转:309<br /><br /><hr><hr>[07月04日 16:44] @lpxt2001<br />坦克开进武汉，大批警察进驻武汉，武汉阳逻和新洲许多民众被抓，数万抗议民众危在旦夕，呼吁全国及全世界人关注！！pic.twitter.com/TyHTYqWuDj<br /><hr>评:200 赞:1498 转:865<br /><br /><hr><hr>[07月04日 13:56] @lpxt2001<br />海外越南人可以说是最反共的群体，因为他们被越共害的家破人亡。越南人比中国人硬气太多，也正直太多。看看这些出头支持香港人的越南歌手，脸上哪儿有半点媚气，就凭这点，我认为越南会比大陆有前途。 https://twitter.com/lihkg_forum/status/1146489304513859584 …<br /><hr>评:33 赞:571 转:143<br /><br /><hr><hr>[07月02日 15:12] @lpxt2001<br />雨も滴るいいハシビロコウ
+
+土砂降りの中で仁王立ちするボンゴ
+
 #神戸どうぶつ王国 #ハシビロコウ #ハシビロコウのボンゴ #shoebillpic.twitter.com/KIA5cUZGNj<br /><hr>评:252 赞:64748 转:23452<br /><br /><hr><hr>[07月04日 23:33] @lpxt2001<br />广東梅州，大开發商的樓盘，100萬买的房子居然可以用螺絲刀刮穿樓板，見到樓下邻居......里面全是劣质水泥，没有钢筋，随时塌方！這些年房子質量越來越差，强国三代人掏空六个钱包，负责累累，买一套只有70年使用期的房，1998-2010修的房子勉强用30年，後面修的房子估計管15年就差不多了！pic.twitter.com/7MwRMEsd1w<br /><hr>评:57 赞:475 转:330<br /><br /><hr><hr>[07月04日 23:32] @lpxt2001<br />等把他们以污染为由唯一几个能使用的外部通道封禁了，最后剩下的，就是微信了  厉害国从顶到底都在使用的聊天软件，子女也都分布世界，如果把微信给“污染”的话，那就更有意思了<br /><hr>评:0 赞:1 转:0<br /><br /><hr><hr>
