--- a/README.html
+++ b/README.html
@@ -5,4 +5,4 @@
 
 土砂降りの中で仁王立ちするボンゴ
 
-#神戸どうぶつ王国 #ハシビロコウ #ハシビロコウのボンゴ #shoebill<br /><hr>评:252 赞:64789 转:23465<br /><br /><hr><hr>[07月04日 23:33] @lpxt2001<br />广東梅州，大开發商的樓盘，100萬买的房子居然可以用螺絲刀刮穿樓板，見到樓下邻居......里面全是劣质水泥，没有钢筋，随时塌方！這些年房子質量越來越差，强国三代人掏空六个钱包，负责累累，买一套只有70年使用期的房，1998-2010修的房子勉强用30年，後面修的房子估計管15年就差不多了！<br /><hr>评:57 赞:485 转:339<br /><br /><hr><hr>[07月04日 23:32] @lpxt2001<br />等把他们以污染为由唯一几个能使用的外部通道封禁了，最后剩下的，就是微信了  厉害国从顶到底都在使用的聊天软件，子女也都分布世界，如果把微信给“污染”的话，那就更有意思了<br /><hr>评:0 赞:1 转:0<br /><br /><hr><hr>
+#神戸どうぶつ王国 #ハシビロコウ #ハシビロコウのボンゴ #shoebill<br /><hr>评:252 赞:64789 转:23465<br /><br /><hr><hr>[07月04日 23:33] @lpxt2001<br />广東梅州，大开發商的樓盘，100萬买的房子居然可以用螺絲刀刮穿樓板，見到樓下邻居......里面全是劣质水泥，没有钢筋，随时塌方！這些年房子質量越來越差，强国三代人掏空六个钱包，负责累累，买一套只有70年使用期的房，1998-2010修的房子勉强用30年，後面修的房子估計管15年就差不多了！<br /><hr>评:57 赞:485 转:339<br /><br /><hr><hr>[07月04日 23:32] @lpxt2001<br />等把他们以污染为由唯一几个能使用的外部通道封禁了，最后剩下的，就是微信了  厉害国从顶到底都在使用的聊天软件，子女也都分布世界，如果把微信给“污染”的话，那就更有意思了<br /><hr>评:0 赞:1 转:0<br /><br /><hr><hr>[07月05日 15:50] @lpxt2001<br />跑跑看<br /><hr>评:0 赞:0 转:0<br /><br /><hr><hr>
